SP_Vault_Comp/force-app/main/default/objects/Athlete__c/fields/Is_RX__c.field-meta.xml
<CustomField>
    <fullName>Is_RX__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Athlete competes at RX level</inlineHelpText>
    <label>Is RX?</label>
    <type>Checkbox</type>
</CustomField>