SP_Vault_Comp/force-app/main/default/objects/Athlete__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>City, State</inlineHelpText>
    <label>Location</label>
    <length>32</length>
    <type>Text</type>
</CustomField>