SP_Vault_Comp/force-app/main/default/objects/Athlete__c/fields/Profile_Pic_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_Pic_URL__c</fullName>
    <label>Profile Pic URL</label>
    <type>Url</type>
</CustomField>