SP_Vault_Comp/force-app/main/default/objects/Athlete__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <inlineHelpText>Sum of all Total Workout Points</inlineHelpText>
    <label>Total Points</label>
    <summarizedField>Score_Submission__c.Total_Workout_Points__c</summarizedField>
    <summaryForeignKey>Score_Submission__c.Athlete_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>