SP_Vault_Comp/force-app/main/default/objects/Athlete__c/fields/Total_Tie_Break_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Tie_Break_Points__c</fullName>
    <label>Total Tie Break Points</label>
    <summarizedField>Score_Submission__c.Tie_Break_Points__c</summarizedField>
    <summaryForeignKey>Score_Submission__c.Athlete_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>