SP_Vault_Comp/force-app/main/default/objects/Athlete__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Points__c</columns>
    <columns>Total_Tie_Break_Points__c</columns>
    <columns>Location__c</columns>
    <columns>Age__c</columns>
    <columns>Profile_Pic_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>